tests/baselines/reference/YieldExpression19_es6.errors.txt
tests/cases/conformance/es6/yieldExpressions/YieldExpression19_es6.ts(1,9): error TS9001: Generators are not currently supported.


==== tests/cases/conformance/es6/yieldExpressions/YieldExpression19_es6.ts (1 errors) ====
    function*foo() {
            ~
!!! error TS9001: Generators are not currently supported.
      function bar() {
        function* quux() {
          yield(foo);
        }
      }
    }